2008-08-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/vec_test.cpp, tests/vec_test.ref: Fix vector
	initialisation test with "a:b" format when a > b

	This test is not valid with the new string parser implementation,
	because negative decrements have to be explicitly gived as 'b' in
	"a:b:c" format string. This is consistant with GNU Octave way of
	parsing such strings.

	* itpp/base/vec.cpp, itpp/base/vec.h: String parser reimplemented
	to support multiple "a:b:c" format strings

	The new implementation supports multiple "a:b[:c]" formats in one
	string. For instance:
	  ivec v = "1:2:5, 6 8 9:-1:0";
	now works.

	Memory handling is also more efficient, i.e. for the cases when
	"a:b:c" format is not used, memory is allocated only once.
	Besides, the new implementation should be easier to maintain,
	because the code is much more modular.

	This patch resolves feature request [2041480].

	* win32/itpp_acml.vcproj, win32/itpp_acml_tests/*.vcproj,
	win32/itpp_mkl.vcproj, win32/itpp_mkl_tests/*.vcproj: Suppress
	warnings about deprecated "/Wp64" options in MSVC++ project files

2008-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp: Add missing "LL" suffix
	to 64-bit inteager initialisation

	This eventually fixes integer overflow error in LDPC BER
	simulation tutorial example.

2008-08-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/stat/mog_diag.h: Suppress a minor warning reported by
	Doxygen

	* doc/tutorial/src/ldpc_bersim_awgn.cpp: Fix minor problem with
	integer overflow in expression

	The initialisation of int64_t variable with a multiplied inteager
	constants caused an integer overflow of the temporary calculation
	result. This patch fixes this issue by using one big constant
	in the initialisation.

2008-08-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.h, tests/vec_test.cpp, tests/vec_test.ref: Fix
	regression [2041474] in Vec<>::split() method
